# DEVOPS_HELM_generic_ib_gateway

./: .gitignore  Chart.yaml  DEVOPS_HELM_generic_ib_gateway_combined.txt  README.md  docker-compose.build.yaml  docker-compose.yaml  generic-ib-gateway-backend-0.1.0.tgz  generic-ib-gateway-backend-0.1.1.tgz  generic-ib-gateway-backend-0.1.2.tgz  generic-ib-gateway-backend-0.1.3.tgz  generic-ib-gateway-backend-0.1.4.tgz  generic-ib-gateway-backend-0.1.5.tgz  generic-ib-gateway-backend-0.1.6.tgz  generic-ib-gateway-backend-0.1.7.tgz  generic-ib-gateway-backend-0.1.8.tgz  generic-ib-gateway-backend-0.2.0.tgz  generic-ib-gateway-backend-0.2.1.tgz  generic-ib-gateway-backend-0.2.10.tgz  generic-ib-gateway-backend-0.2.2.tgz  generic-ib-gateway-backend-0.2.3.tgz  generic-ib-gateway-backend-0.2.4.tgz  generic-ib-gateway-backend-0.2.5.tgz  generic-ib-gateway-backend-0.2.6.tgz  generic-ib-gateway-backend-0.2.7.tgz  generic-ib-gateway-backend-0.2.8.tgz  generic-ib-gateway-backend-0.2.9.tgz  generic-ib-gateway-backend-0.3.0.tgz  generic-ib-gateway-backend-0.3.1.tgz  generic-ib-gateway-backend-0.3.2.tgz  generic-ib-gateway-backend-0.3.3.tgz  generic-ib-gateway-backend-0.3.4.tgz  ib-gateway-0.1.0.tgz  ib-gateway-docker_combined.txt  index.yaml  novnc.Dockerfile  python.Dockerfile  script-manager.sh  values.yaml
docs/: docs.txt
python-scripts/: ib-testing-container.py  ib-testing.py  pyproject.toml
python-scripts/IB/: ib_historical.py
scripts/: creer_secret_ib.sh  novnc-start.sh  test-vnc.sh
templates/: _helpers.tpl  configmap-python.yaml  configmap.yaml  deployment-novnc.yaml  (+8 more)
(+3 files in other folders)
