[tool.poetry]
name = "qantor"
version = "0.1.0"
description = ""
authors = ["mileto <carmeloenzomileto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
ibapi = "^9.81.1.post1"
pandas = "^2.2.3"
ib-insync = "^0.9.86"
nest-asyncio = "^1.6.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
requests = "^2.32.3"
numpy = "^2.1.3"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
mplfinance = "^0.12.10b0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
